--- a/index.html
+++ b/index.html
@@ -159,18 +159,18 @@
             <div class="trend">
                 <h2>Trending News</h2>
                 <ul>
-                    <li><a href="#">copa America</a></li>
-                    <li><a href="#">euro cup</a></li>
-                    <li><a href="#">word cup</a></li>
-                    <li><a href="#">world cup selection</a></li>
-                    <li><a href="#">america football</a></li>
-                    <li><a href="#">brasil football</a></li>
-                    <li><a href="#">espain football</a></li>
-                    <li><a href="#">bangla football</a></li>
-                    <li><a href="#">india football</a></li>
-                    <li><a href="#">turosko football</a></li>
-                    <li><a href="#">hangeri football</a></li>
-                    <li><a href="#">cili football</a></li>
+                    <li><a href="#">Copa America</a></li>
+                    <li><a href="#">Euro cup</a></li>
+                    <li><a href="#">Word cup</a></li>
+                    <li><a href="#">World Cup Selection</a></li>
+                    <li><a href="#">America football</a></li>
+                    <li><a href="#">Brasil football</a></li>
+                    <li><a href="#">Spain football</a></li>
+                    <li><a href="#">Bangla football</a></li>
+                    <li><a href="#">India football</a></li>
+                    <li><a href="#">Turkey football</a></li>
+                    <li><a href="#">France football</a></li>
+                    <li><a href="#">Chili football</a></li>
                     
                 </ul>
             </div>
